--- a/vocabularyrecommender/pom.xml
+++ b/vocabularyrecommender/pom.xml
@@ -1,12 +1,36 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>cz.muni.fi.PV245.vocabularyrecommender</groupId>
+  <groupId>cz.muni.fi.pv245.vocabularyrecommender</groupId>
   <artifactId>vocabularyrecommender</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>vocabularyrecommender Maven Webapp</name>
   <url>http://maven.apache.org</url>
+
+  <build>
+    <finalName>vocabularyrecommender</finalName>
+    <plugins>
+      <!-- Java language version -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>8</source>
+          <target>8</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>LATEST</version>
+        <configuration>
+          <failOnMissingWebXml>false</failOnMissingWebXml>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -14,8 +38,26 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>cz.muni.fi.pv245.vocabularyrecommender</groupId>
+      <artifactId>vocabularyrecommender</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>cz.muni.fi.pv245.vocabularyrecommender</groupId>
+      <artifactId>vocabularyrecommender</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
-  <build>
-    <finalName>vocabularyrecommender</finalName>
-  </build>
+  <dependency>
+    <groupId>javax</groupId>
+    <artifactId>javaee-web-api</artifactId>
+    <version>6.0</version>
+    <scope>provided</scope>
+  </dependency>
+  <dependency>
+    <groupId>javax.servlet.jsp.jstl</groupId>
+    <artifactId>javax.servlet.jsp.jstl-api</artifactId>
+    <version>1.2.1</version>
+  </dependency>
 </project>
