--- a/vocabularyrecommender/Gemfile
+++ b/vocabularyrecommender/Gemfile
@@ -1,8 +1,9 @@
 source 'https://rubygems.org'
+
 gem 'rake'
 gem 'ruby-tf-idf'
 gem 'highscore'
 gem 'bloomfilter-rb'
 gem 'stemmer'
 gem 'json'
-gem 'whatlanguage'
+gem 'cld'
