--- a/vocabularyrecommender/src/main/webapp/WEB-INF/web.xml
+++ b/vocabularyrecommender/src/main/webapp/WEB-INF/web.xml
@@ -1,15 +1,17 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+<web-app xmlns="http://java.sun.com/xml/ns/j2ee"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
+    version="2.4">
 
-<web-app version="2.5"
-         xmlns="http://java.sun.com/xml/ns/javaee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
-    http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
-  <display-name>Archetype Created Web Application</display-name>
-  <listener>
-    <listener-class>cz.muni.fi.pv245.vocabularyrecommender.web.StartListener</listener-class>
-  </listener>
-</web-app>
+    <display-name>Facebook Login Application</display-name>
+    <servlet>
+        <servlet-name>MainMenu</servlet-name>
+        <servlet-class>com.javapapers.java.social.facebook.MainMenu</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>MainMenu</servlet-name>
+        <url-pattern>/fbhome</url-pattern>
+    </servlet-mapping>
+
+</web-app>   
