--- a/vocabularyrecommender/pom.xml
+++ b/vocabularyrecommender/pom.xml
@@ -60,6 +60,11 @@
             <version>1.1.1</version>
         </dependency>
         <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20090211</version>
+        </dependency>
+        <dependency>
             <groupId>org.jruby</groupId>
             <artifactId>jruby-complete</artifactId>
             <version>9.1.2.0</version>
