--- a/vocabularyrecommender/pom.xml
+++ b/vocabularyrecommender/pom.xml
@@ -69,5 +69,11 @@
             <artifactId>jruby-complete</artifactId>
             <version>9.1.2.0</version>
         </dependency>
+        <dependency>
+          <groupId>com.google.code.gson</groupId>
+          <artifactId>gson</artifactId>
+          <version>2.3</version>
+          <scope>compile</scope>
+        </dependency>        
     </dependencies>
 </project>
