--- a/vocabularyrecommender/Gemfile
+++ b/vocabularyrecommender/Gemfile
@@ -1,9 +1,10 @@
 source 'https://rubygems.org'
 
 gem 'rake'
-gem 'ruby-tf-idf'
+# gem 'ruby-tf-idf'
 gem 'highscore'
-gem 'bloomfilter-rb'
-gem 'stemmer'
+# gem 'bloomfilter-rb'
+# gem 'stemmer'
 gem 'json'
 gem 'cld'
+gem 'i18n'
