comeback to ruby from jruby

--- a/vocabularyrecommender/Gemfile
+++ b/vocabularyrecommender/Gemfile
@@ -1,10 +1,10 @@
 source 'https://rubygems.org'
 
 gem 'rake'
-# gem 'ruby-tf-idf'
 gem 'highscore'
+gem 'json'
+gem 'i18n'
 # gem 'bloomfilter-rb'
 # gem 'stemmer'
-gem 'json'
-gem 'cld'
-gem 'i18n'
+# gem 'cld'
+# gem 'ruby-tf-idf'
