--- a/vocabularyrecommender/pom.xml
+++ b/vocabularyrecommender/pom.xml
@@ -69,6 +69,11 @@
           <artifactId>gson</artifactId>
           <version>2.3</version>
           <scope>compile</scope>
-        </dependency>        
+        </dependency> 
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-translate</artifactId>
+            <version>0.6.0</version>
+        </dependency>
     </dependencies>
 </project>
